# FERB

./: .gitignore  README.md  ap.py  ap_client.py  ap_client_1.py  ap_client_2.py  ap_host.py  blink.py  ferb_setup.sh  network.py  pi_setup.sh  setup.sh
C_VERSION/: CMakeLists.txt  README.md
C_VERSION/examples/minicom_demo/: CMakeLists.txt  README.md
PYTHON_VERSION/: README.md  hotspot_host.py  mqtt_device_pub.py  pico_device.py  thermal_cam.py
PYTHON_VERSION/FERB_device_code/: FERB_client.py  main.py
PYTHON_VERSION/FERB_host_code/: hotspot_host.py  thermal_cam.py
PYTHON_VERSION/test_files/: main.py  parse_bytes.py  test_device.py  test_main.py
device_code/: ClientNethandler.py  FERBCLI.py  FERBDevice.py  FERB_client.py  amg88xx.py  debug.py  main.py
examples/: CMakeLists.txt
examples/minicom_demo/: CMakeLists.txt  minicom.c  minicom.cpp
host_code/: FERB_GUI.py  FERB_widgets.py  README.md  blob_detect.py  detection_test.py  detector_cam.py  detector_cam_interp.py  echo_server.py  grid_eye_printer.py  hotspot_host.py  interp_thermal_cam.py  jh_testing.py  main.py  main_test.py  requirements.txt  run_server.sh  server_base.py  test.py  test_graphics.py  test_jh.py  test_normalization.py  thermal_cam.py  thermal_map_test.py  thermal_test.py
old_src/: README.md
old_src/examples/blink/: CMakeLists.txt  (+1 more)
pc_host_code/: detector.py  echo_server.py  grid_eye_printer.py  hotspot_host.py  run_hotspot.sh  server_base.py
pico_host_code/: FERBHost.py  HostNethandler.py  main.py
server_test/: ap_client_1.py  ap_client_2.py  server_test.py
src/: CMakeLists.txt
(+1 files in other folders)
